updated correct spacing dropdown

--- a/frontend/assets/styles/components/_game.scss
+++ b/frontend/assets/styles/components/_game.scss
@@ -69,7 +69,7 @@
         height: 100%;
 
         h3 {
-          margin-bottom: calc($singleSpacing - 3px);
+          margin-bottom: calc($singleSpacing - 6px);
         }
 
         .other-players {
